--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,10 @@ dependencies:
   flutter:
     sdk: flutter
 
-  flutter_compass: ^0.7.0
+  flutter_compass: #^0.7.0 # Here the git ref is used because current 0.7.0 forces android min sdk to be 23
+    git:
+      url: https://github.com/hemanthrajv/flutter_compass.git
+      ref: 14e134f0aed3c9fe09065bea05281f2c26f171d1
   geolocator: ^7.6.0
   stream_transform: ^2.0.0
   vector_math: ^2.1.0
